# Utilities

./: .gitignore  README.md
lmgtfy/: Cargo.toml  README.md
lmgtfy/src/: main.rs
spoiler/: Cargo.toml  README.md
spoiler/src/: main.rs
spongebob/: Cargo.toml  README.md
spongebob/src/: main.rs
tlc/: Cargo.toml  README.md
tlc/src/: main.rs
ucsdcourselist/: Cargo.toml  README.md  courses.tsv
ucsdcourselist/src/: main.rs
wgtools/: Cargo.toml  README.md
wgtools/src/: main.rs
