[package]
name = "ucsdcourselist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.18.2", features = ["macros"] }
html-escape = "0.2.11"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
