[package]
name = "wgtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
webweg = { git = "https://github.com/ewang2002/webweg", branch = "stable" }
tokio = { version = "1.17.0", features = ["macros"] }