[package]
name = "wgtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
webweg = "0.7.1"
tokio = { version = "1.17.0", features = ["macros"] }

[profile.release]
strip = true
lto = true
panic = "abort"